--- a/res/style.css
+++ b/res/style.css
@@ -64,7 +64,8 @@ TABLE#indexlist .indexcolicon {
   background-color: #f6f8fa;
 }
 
-.markdown-body table th, table td {
+.markdown-body table th,
+.markdown-body table td {
   padding: 6px 13px;
   border: 1px solid #dfe2e5;
 }
